--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,28 @@
+* {
+  padding: 0;
+  margin:0;
+
+}
+
+body {
+  height: 100vh;
+  background-color: aliceblue;
+  padding: 16px 24px;
+  box-sizing: border-box;
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  height: 95%;
+  box-sizing: border-box;
 }
 
-div.timer > h1 {
-  font-weight: 200;
-  font-size: 10rem;
-  margin: 0;
+#buttons button {
+  background-color: white;
+  border: 1px solid #e0f2fe;
+  padding: 8px 12px;
+  border-radius: 8px;
 }
 
-div.timer > p {
-  margin: 0;
-}
-
-div.timer > progress {
-  width: 500px;
-  accent-color: lightblue;
-}
-
-div.buttons {
-  display: flex;
-  gap: 8px;
-  justify-content: center;
-  margin: 12px;
+a.active {
+  border-bottom: 1px solid #22d3ee;
 }
